# tpa2020_assignment_02_solution

./: CMakeLists.txt  README.md  main.cpp
include/: ClosedLoop.h  batchSimultaion.h
include/liblinalg/: Matrix.h  MatrixBase.h  Vector.h
include/libsimcon/: Controllable.h  Controller.h  Simulable.h  Simulator.h
include/linalglib/: Matrix.h  MatrixBase.h  Vector.h
src/: ClosedLoop.cpp  Controller.cpp  Matrix.cpp  MatrixBase.cpp  Simulator.cpp  Vector.cpp
tests/: CMakeLists.txt  catch2Main.cpp  linAlgMatBaseTests.cpp  linAlgVecTests.cpp  linalgTests.cpp  linalgTestsMat.cpp  simconTests.cpp
